@startuml TimeTracker
hide circle
skinparam Linetype ortho

entity User {
    *id: Int
    ---
    *username: String
    *password: String
    *salt: String
}

entity Activity {    
    *id: Int
    *categoryId: String <<Foreign UUID>>
    *userId: String <<Foreign UUID>>
    ---
    *name: String
}

entity Record {
    *id: Int
    *activityId: Int
    ---
    *startedAt: DateTime
    endedAt: DateTime
    deleted: bool
}

entity Category {
    *id: String <<UUID>>
    ---
    *name: String
}

User ||..o{ Activity
Category ||..o{ Activity
Activity ||..o{ Record 
@enduml
